# Financial-Algo-Testing

./: .gitmodules  CMakeLists.txt
include/: Financial.h
src/: main.cpp
